2010-07-05  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: Added support for FreeBSD.

	* FreeBSD/pandora_server, FreeBSD/tentacle_server: Added startup
	script for FreeBSD.

	* FreeBSD/pandora_server.conf: Added configuration file for FreeBSD.

2010-06-10  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Redefine downtime name and description if
	not defined.

	* lib/PandoraFMS/Tools.pm: Octopus is now known as Octopods.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Set the default server_threshold to 5
	  seconds.

2010-06-09  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: added the code to include the man pages into
	DEB package.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Set the default server_threshold to 5
	  seconds.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Create the man dir.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec,
	  pandora_server_installer: Copy man files.

2010-06-09  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Copy man files.

2010-06-09  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed errors of parameters 
	for bug 3013419

2010-06-08  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/make_deb_package.sh,
	  pandora_server.spec, lib/PandoraFMS/Config.pm: Updated version
	  strings.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/postinst: fixed when the package DEB no have previus conf file.
	
	* DEBIAN/make_deb_package.sh: cleaned source code.

2010-06-04  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Fixed the %postun target.

2010-06-04  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console.spec: Fixed. Upgrading an RPM broke the installation.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/prerm: disabled the delete conf file.

2010-06-01  Ramon Novoa  <rnovoa@artica.es>
