@@ -1,3 +1,12 @@
+2010-07-06  Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* lib/PandoraFMS/Core.pm, ReconServer.pm, DataServer.pm: Delete 
+	$address_id paremeter from function pandora_create_agent()
+
+	* util/pandora_manage.pl: Delete $address_id paremeter from function 
+	pandora_create_agent()
+	Fixes bug #3006770
+
 2010-07-05  Junichi Satoh <junichi@rworks.jp>
 
 	* pandora_server_installer: Added support for FreeBSD.
